# gpu-mpi-tests

./: .gitignore  CMakeLists.txt  Makefile  avg.sh  cuda_error.h  daxpy.cu  daxpy_nvtx.cu  mpi_daxpy.cc  mpi_daxpy_gt.cc  mpi_daxpy_nvtx.cc  mpi_stencil2d_gt.cc  mpi_stencil2d_sycl.cc  mpi_stencil2d_sycl_oo.cc  mpi_stencil_gt.cc  mpienv.f90  mpigatherinplace.f90
jlse/: job.pbs  run.sh  setup.sh
summit/: job.lsf  run.sh
